# workflow-terminal-examples

cli/: Cargo.toml
cli/src/: lib.rs
native/: Cargo.toml
native/src/: main.rs
wasm/: Cargo.toml
wasm/root/: index.html
wasm/src/: lib.rs
