[package]
name = "workflow-terminal-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
cli = { path = "../cli" }
workflow-terminal = {path = "../../workflow-terminal"}
workflow-log = { path = "../../workflow-log" }
async-std = { version = "1.12.0", features = ['attributes'] }
async-trait = "0.1.57"
tokio = { version = "1.20.1", default-features = false, features = ['rt-multi-thread'] }
